# swiftperm-bench

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
SwiftGeo/: Package.swift
SwiftGeo/Sources/SwiftGeo/: BinaryIO.swift  LocalStatistics.swift  MetalPermutation.swift  MoranPermutation.metal  MoranPermutation.swift  Statistics.swift
SwiftGeo/Sources/SwiftGeoCLI/: main.swift
SwiftGeo/Sources/SwiftGeoLib/: bridge.swift
data/: baselines.json  columbus_meta.json  kingcounty_meta.json  ncovr_meta.json  nyc_earnings_meta.json  sdoh_meta.json  synthetic_meta.json
paper/: citation_analysis.md  figures.aux  figures.tex  notes.md  references.bib
python/: baseline.py  benchmark.py  generate_fixtures.py  generate_synthetic.py  pyproject.toml  swiftperm.py  test_swiftperm.py
results/: summary.json
